update shards versions and crystal versions

--- a/crystal_client_templates/shard.mustache
+++ b/crystal_client_templates/shard.mustache
@@ -4,19 +4,19 @@ authors:
   - {{{shardAuthors}}}
 description: |
   - {{{ shardDescription}}}
-crystal: ">= 0.35.1"
+crystal: ">= 1, < 2"
 dependencies:
   crest:
     github: mamantoha/crest
-    version: ~> 0.26.0
+    version: ~> 1.0
   nason:
     github: cyangle/nason
-    version: ~> 0.2.1
+    version: ~> 0.2.2
 
 development_dependencies:
   kemal:
     github: kemalcr/kemal
-    version: ~>0.27.0
+    version: ~> 1.0
   ameba:
     github: crystal-ameba/ameba
 
