--- a/crystal_client_templates/api_client.mustache
+++ b/crystal_client_templates/api_client.mustache
@@ -1,6 +1,7 @@
 # {{#lambdaPrefixWithHash}}{{> api_info}}{{/lambdaPrefixWithHash}}
 
 require "log"
+require "./configuration"
 
 module {{moduleName}}
   class ApiClient
@@ -38,7 +39,7 @@ module {{moduleName}}
     end
 
 
-    def build_request_url(path : String, operation : Symbol)
+    def build_request_url(path : String, operation : String)
       # Add leading and trailing slashes to path
       path = "/#{path}".gsub(/\/+/, "/")
       @config.base_url(operation) + path
@@ -53,9 +54,9 @@ module {{moduleName}}
       auth_names.each do |auth_name|
         auth_setting = @config.auth_settings[auth_name]
         next unless auth_setting
-        case auth_setting[:in]
-        when "header" then header_params[auth_setting[:key]] = auth_setting[:value]
-        when "query"  then query_params[auth_setting[:key]] = auth_setting[:value]
+        case auth_setting["in"]
+        when "header" then header_params[auth_setting["key"]] = auth_setting["value"]
+        when "query"  then query_params[auth_setting["key"]] = auth_setting["value"]
         else raise ArgumentError.new("Authentication token must be in `query` of `header`")
         end
       end
@@ -95,20 +96,20 @@ module {{moduleName}}
     end
 
     # Build parameter value according to the given collection format.
-    # @param [String] collection_format one of :csv, :ssv, :tsv, :pipes and :multi
-    def build_collection_param(param, collection_format)
+    # @param [String] collection_format one of csv, ssv, tsv, pipes and multi
+    def build_collection_param(params, collection_format)
+      param_strings = params.map(&:to_s)
       case collection_format
-      when :csv
-        param.join(",")
-      when :ssv
-        param.join(" ")
-      when :tsv
-        param.join("\t")
-      when :pipes
-        param.join("|")
-      when :multi
-        # TODO: Need to fix this
-        raise "multi is not supported yet"
+      when "csv"
+        param_strings.join(",")
+      when "ssv"
+        param_strings.join(" ")
+      when "tsv"
+        param_strings.join("\t")
+      when "pipes"
+        param_strings.join("|")
+      when "multi"
+        param_strings
       else
         raise "unknown collection format: #{collection_format.inspect}"
       end
@@ -118,13 +119,13 @@ module {{moduleName}}
     #
     # @return [Array<(Object, Integer, Hash)>] an array of 3 elements:
     #   the data deserialized from response body (could be nil), response status code and response headers.
-    def call_api(http_method : Symbol, path : String, operation : Symbol, return_type : String?, post_body : String?, auth_names = [] of String, header_params = {} of String => String, query_params = {} of String => String, form_params = {} of Symbol => (String | ::File))
+    def call_api(http_method : Symbol, path : String, operation : String, return_type : String?, post_body : String?, auth_names = [] of String, header_params = {} of String => String, query_params = {} of String => String, form_params = {} of String => (String | Array(String) | ::File))
       #ssl_options = {
-      #  :ca_file => @config.ssl_ca_file,
-      #  :verify => @config.ssl_verify,
-      #  :verify_mode => @config.ssl_verify_mode,
-      #  :client_cert => @config.ssl_client_cert,
-      #  :client_key => @config.ssl_client_key
+      #  "ca_file" => @config.ssl_ca_file,
+      #  "verify" => @config.ssl_verify,
+      #  "verify_mode" => @config.ssl_verify_mode,
+      #  "client_cert" => @config.ssl_client_cert,
+      #  "client_key" => @config.ssl_client_key
       #}
 
       update_params_for_auth! header_params, query_params, auth_names
