--- a/crystal_client_templates/configuration.mustache
+++ b/crystal_client_templates/configuration.mustache
@@ -17,29 +17,29 @@ module {{moduleName}}
     property server_index : Int32
 
     # Define server operation configuration index
-    property server_operation_index : Hash(Symbol, String)
+    property server_operation_index : Hash(String, String)
 
     # Default server variables
-    property server_variables : Hash(Symbol, String)
+    property server_variables : Hash(String, String)
 
     # Default server operation variables
-    property server_operation_variables : Hash(Symbol, String)
+    property server_operation_variables : Hash(String, String)
 
     # Defines API keys used with API Key authentications.
     #
-    # @return [Hash] key: parameter name, value: parameter value (API key)
+    # @return [Hash] "key" => parameter name, value: parameter value (API key)
     #
     # @example parameter name is "api_key", API key is "xxx" (e.g. "api_key=xxx" in query string)
-    #   config.api_key[:api_key] = "xxx"
-    property api_key : Hash(Symbol, String)
+    #   config.api_key["api_key"] = "xxx"
+    property api_key : Hash(String, String)
 
     # Defines API key prefixes used with API Key authentications.
     #
-    # @return [Hash] key: parameter name, value: API key prefix
+    # @return [Hash] "key" => parameter name, value: API key prefix
     #
     # @example parameter name is "Authorization", API key prefix is "Token" (e.g. "Authorization: Token xxx" in headers)
-    #   config.api_key_prefix[:api_key] = "Token"
-    property api_key_prefix : Hash(Symbol, String)
+    #   config.api_key_prefix["api_key"] = "Token"
+    property api_key_prefix : Hash(String, String)
 
     # Defines the username used with HTTP basic authentication.
     #
@@ -125,11 +125,11 @@ module {{moduleName}}
       @host = "{{host}}{{#port}}:{{{.}}}{{/port}}"
       @base_path = "{{contextPath}}"
       @server_index = 0
-      @server_operation_index = {} of Symbol => String
-      @server_variables = {} of Symbol => String
-      @server_operation_variables = {} of Symbol => String
-      @api_key = {} of Symbol => String
-      @api_key_prefix = {} of Symbol => String
+      @server_operation_index = {} of String => String
+      @server_variables = {} of String => String
+      @server_operation_variables = {} of String => String
+      @api_key = {} of String => String
+      @api_key_prefix = {} of String => String
       @timeout = 0
       @client_side_validation = true
       @verify_ssl = true
@@ -213,39 +213,39 @@ module {{moduleName}}
 {{#authMethods}}
 {{#isApiKey}}
         "{{name}}" => {
-          type: "api_key",
-          in: {{#isKeyInHeader}}"header"{{/isKeyInHeader}}{{#isKeyInQuery}}"query"{{/isKeyInQuery}},
-          key: "{{keyParamName}}",
-          value: api_key_with_prefix(:{{keyParamName}})
+          "type" => "api_key",
+          "in" => {{#isKeyInHeader}}"header"{{/isKeyInHeader}}{{#isKeyInQuery}}"query"{{/isKeyInQuery}},
+          "key" => "{{keyParamName}}",
+          "value" => api_key_with_prefix("{{keyParamName}}")
         },
 {{/isApiKey}}
 {{#isBasic}}
 {{#isBasicBasic}}
         "{{name}}" => {
-          type: "basic",
-          in: "header",
-          key: "Authorization",
-          value: basic_auth_token
+          "type" => "basic",
+          "in" => "header",
+          "key" => "Authorization",
+          "value" => basic_auth_token
         },
 {{/isBasicBasic}}
 {{#isBasicBearer}}
         "{{name}}" => {
-          type: "bearer",
-          in: "header",
+          "type" => "bearer",
+          "in" => "header",
           {{#bearerFormat}}
           format: "{{{.}}}",
           {{/bearerFormat}}
-          key: "Authorization",
-          value: "Bearer #{access_token}"
+          "key" => "Authorization",
+          "value" => "Bearer #{access_token}"
         },
 {{/isBasicBearer}}
 {{/isBasic}}
 {{#isOAuth}}
         "{{name}}" => {
-          type: "oauth2",
-          in: "header",
-          key: "Authorization",
-          value: "Bearer #{access_token}"
+          "type" => "oauth2",
+          "in" => "header",
+          "key" => "Authorization",
+          "value" => "Bearer #{access_token}"
         },
 {{/isOAuth}}
 {{/authMethods}}
@@ -257,18 +257,18 @@ module {{moduleName}}
       [
       {{#servers}}
         {
-          url: "{{{url}}}",
-          description: "{{{description}}}{{^description}}No description provided{{/description}}",
+          "url" => "{{{url}}}",
+          "description" => "{{{description}}}{{^description}}No description provided{{/description}}",
           {{#variables}}
           {{#-first}}
-          variables: {
+          "variables" => {
           {{/-first}}
-            "{{{name}}}": {
-                description: "{{{description}}}{{^description}}No description provided{{/description}}",
-                default_value: "{{{defaultValue}}}",
+            "{{{name}}}" => {
+                "description" => "{{{description}}}{{^description}}No description provided{{/description}}",
+                "default_value" => "{{{defaultValue}}}",
                 {{#enumValues}}
                 {{#-first}}
-                enum_values: [
+                "enum_values" => [
                 {{/-first}}
                   "{{{.}}}"{{^-last}},{{/-last}}
                 {{#-last}}
@@ -293,21 +293,21 @@ module {{moduleName}}
         {{#servers}}
         {{#-first}}
       {
-        "{{{classname}}}.{{{nickname}}}": [
+        "{{{classname}}}.{{{nickname}}}" => [
         {{/-first}}
           {
-          url: "{{{url}}}",
-          description: "{{{description}}}{{^description}}No description provided{{/description}}",
+          "url" => "{{{url}}}",
+          "description" => "{{{description}}}{{^description}}No description provided{{/description}}",
           {{#variables}}
           {{#-first}}
-          variables: {
+          "variables" => {
           {{/-first}}
-            "{{{name}}}": {
-                description: "{{{description}}}{{^description}}No description provided{{/description}}",
-                default_value: "{{{defaultValue}}}",
+            "{{{name}}}" => {
+                "description" => "{{{description}}}{{^description}}No description provided{{/description}}",
+                "default_value" => "{{{defaultValue}}}",
                 {{#enumValues}}
                 {{#-first}}
-                enum_values: [
+                "enum_values" => [
                 {{/-first}}
                   "{{{.}}}"{{^-last}},{{/-last}}
                 {{#-last}}
@@ -335,30 +335,31 @@ module {{moduleName}}
     #
     # @param index array index of the server settings
     # @param variables hash of variable and the corresponding value
-    def server_url(index, variables = {} of Symbol => String, servers = Nil)
-      servers = server_settings if servers == Nil
+    def server_url(index_string, variables = {} of String => String, servers = nil)
+      servers = server_settings if servers.nil?
 
+      index = index_string.to_i
       # check array index out of bound
       if (index < 0 || index >= servers.size)
         raise ArgumentError.new("Invalid index #{index} when selecting the server. Must be less than #{servers.size}")
       end
 
       server = servers[index]
-      url = server[:url]
+      url = server["url"]
 
-      return url unless server.has_key? :variables
+      return url unless server.has_key? "variables"
 
       # go through variable and assign a value
-      server[:variables].each do |name, variable|
+      server["variables"].each do |name, variable|
         if variables.has_key?(name)
-          if (!server[:variables][name].has_key?(:enum_values) || server[:variables][name][:enum_values].includes?(variables[name]))
+          if (!server["variables"][name].has_key?("enum_values") || server["variables"][name]["enum_values"].includes?(variables[name]))
             url.gsub! "{" + name.to_s + "}", variables[name]
           else
-            raise ArgumentError.new("The variable `#{name}` in the server URL has invalid value #{variables[name]}. Must be #{server[:variables][name][:enum_values]}.")
+            raise ArgumentError.new("The variable `#{name}` in the server URL has invalid value #{variables[name]}. Must be #{server["variables"][name]["enum_values"]}.")
           end
         else
           # use default value
-          url.gsub! "{" + name.to_s + "}", server[:variables][name][:default_value]
+          url.gsub! "{" + name.to_s + "}", server["variables"][name]["default_value"]
         end
       end
 
