--- a/crystal_client_templates/api_test.mustache
+++ b/crystal_client_templates/api_test.mustache
@@ -9,7 +9,7 @@ require "../spec_helper"
   describe "test an instance of {{classname}}" do
     it "should create an instance of {{classname}}" do
       api_instance = {{moduleName}}::{{classname}}.new
-      # TODO expect(api_instance).to be_instance_of({{moduleName}}::{{classname}})
+      api_instance.should be_a({{moduleName}}::{{classname}})
     end
   end
 
@@ -21,9 +21,9 @@ require "../spec_helper"
   {{#notes}}
   # {{.}}
   {{/notes}}
-{{#allParams}}{{#required}}  # @param {{paramName}} {{description}}
+{{#allParams}}{{#required}}  # @param {{paramName}}{{#description}} {{.}}{{/description}}
 {{/required}}{{/allParams}}  # @param [Hash] opts the optional parameters
-{{#allParams}}{{^required}}  # @option opts [{{{dataType}}}] :{{paramName}} {{description}}
+{{#allParams}}{{^required}}  # @option opts [{{{dataType}}}] :{{paramName}}{{#description}} {{.}}{{/description}}
 {{/required}}{{/allParams}}  # @return [{{{returnType}}}{{^returnType}}nil{{/returnType}}]
   describe "{{operationId}} test" do
     it "should work" do
