Fix shard.mustache and update readme with more options

--- a/crystal_client_templates/shard.mustache
+++ b/crystal_client_templates/shard.mustache
@@ -3,7 +3,7 @@ version: {{{shardVersion}}}
 authors:
   - {{{shardAuthors}}}
 description: |
-  - {{{ shardDescription}}}
+  {{{shardDescription}}}
 crystal: ">= 1, < 2"
 dependencies:
   crest:
