--- a/crystal_client_templates/configuration.mustache
+++ b/crystal_client_templates/configuration.mustache
@@ -204,7 +204,7 @@ module {{moduleName}}
 
     # Gets Basic Auth token string
     def basic_auth_token
-      "Basic " + ["#{username}:#{password}"].pack("m").delete("\r\n")
+      "Basic #{Base64.strict_encode("#{username}:#{password}")}"
     end
 
     # Returns Auth Settings hash for api client.
