Set form_params to nil when it's not required

--- a/crystal_client_templates/api.mustache
+++ b/crystal_client_templates/api.mustache
@@ -178,7 +178,12 @@ module {{moduleName}}
       {{/headerParams}}
 
       # form parameters
+      {{#formParams}}
       form_params = Hash(String, (String | Array(String) | ::File)).new
+      {{/formParams}}
+      {{^formParams}}
+      form_params = nil
+      {{/formParams}}
       {{#formParams}}
       {{#isFile}}
       form_params["{{baseName}}"] = {{paramName}} if !{{paramName}}.nil? && !{{paramName}}.null?
