Update crest to 1.1.0 and use Crest::NestedParamsEncoder by default
Remove generatorVersion from api_info.mustache

--- a/crystal_client_templates/shard_name.mustache
+++ b/crystal_client_templates/shard_name.mustache
@@ -1,4 +1,5 @@
 # {{#lambdaPrefixWithHash}}{{> api_info}}{{/lambdaPrefixWithHash}}
+# OpenAPI Generator version: {{{generatorVersion}}}
 
 # Dependencies
 require "crest"
